--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,17 @@
-title: Your awesome title
+title: Desenhando com Mack
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://desenhandocommack.com.br"
 twitter_username: jekyllrb
-github_username:  jekyll
 
 # Build settings
 markdown: kramdown
+permalink: /blog/:title/
+include: ['_pages']
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
