--- a/_config.yml
+++ b/_config.yml
@@ -5,14 +5,14 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://desenhandocommack.com.br"
 
 social:
-  - twitter: mackdesenhos
-  - facebook: desenhandocommack
-  - youtube: desenhandocommack
-  - instagram: desenhandocommack
+    twitter: mackdesenhos
+    facebook: desenhandocommack
+    youtube: desenhandocommack
+    instagram: desenhandocommack
 
 author:
-  - name: Mack
-  - avatar: https://placeimg.com/50/50/people
+    name: Mack
+    avatar: https://placeimg.com/50/50/people
 
 paginate: 6
 paginate_path: "/blog/page-:num/"
