--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Desenhando com Mack
 email: your-email@example.com
 description: Este é o site oficial do canal Desenhando com Mack
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "confident-varahamihira-795914.netlify.com"
+url: "https://confident-varahamihira-795914.netlify.com"
 
 incremental: true
 
