Troquei o avatar do autor

--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ contact:
 
 author:
     name: Mack
-    avatar: /assets/img/logo.jpg
+    avatar: /assets/img/avatar.jpg
 
 pagination:
   enabled: true
