Mudar configuração do VS Code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,6 @@
         ".jekyll-metadata": true,
         ".sass-cache": true,
         "_site": true,
-        "node_modules": false
+        "node_modules": true
     }
 }
