--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "browser-sync": "^2.24.7",
     "del": "^3.0.0",
     "gulp": "^4.0.0"
+  },
+  "dependencies": {
+    "gulp-htmlmin": "^5.0.1"
   }
 }
