--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -1,8 +1,8 @@
-- question: pergunta 1
-  answer: resposta 1
+- question: Qual programa você usa?
+  answer: Eu uso vários programas, um para cada finalidade, e dentre eles temos Photoshop, Inkscape, Hitfilm Express, Audacity, Krita, Blender, LibreOffice e After Effects. Neste vídeo https://youtu.be/Q_tVHLGVDNA e neste aqui também https://youtu.be/01oQNJhPbuI eu mostro mais algumas opções que já testei e que são legais. 
 
-- question: pergunta 2
-  answer: resposta 2
+- question: Você desenha com o que?
+  answer: Atualmente utilizo uma mesa digitalizadora Wacom Bamboo Capture Small Pen & Touch CTH470L, e falei sobre ela neste vídeo aqui → https://youtu.be/CuZoG2eYCvY
 
-- question: pergunta 3
-  answer: resposta 3
+- question: Você faz desenho por encomenda? Qual o preço?
+  answer: Em breve sai uma sessão aqui no site sobre serviços, mas por enquanto ainda não.
