--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -6,3 +6,6 @@
 
 - question: Você faz desenho por encomenda? Qual o preço?
   answer: Em breve sai uma sessão aqui no site sobre serviços, mas por enquanto ainda não.
+
+- question: Você já fez curso de desenho? Indica algum?
+  answer: ainda não fiz nenhum curso de desenho ou algo relacionado, mas fortemente indico fuçarem nos canais BRUSH RUSH, ICONIC E REVOLUTION NOW; lá tá sempre rolando conteúdo gratuito como palestras e vídeos no Youtube, assim como cursos pagos que com certeza são de ótima qualidade.
