--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -1,5 +1,5 @@
 - question: Qual programa você usa?
-  answer: Eu uso vários programas, um para cada finalidade, e dentre eles temos Photoshop, Inkscape, Hitfilm Express, Audacity, Krita, Blender, LibreOffice e After Effects. Neste vídeo <a href="https://youtu.be/Q_tVHLGVDNA" target="_blank">aqui</a) e neste aqui também https://youtu.be/01oQNJhPbuI eu mostro mais algumas opções que já testei e que são legais. 
+  answer: Eu uso vários programas, um para cada finalidade, e dentre eles temos Photoshop, Inkscape, Hitfilm Express, Audacity, Krita, Blender, LibreOffice e After Effects. Neste vídeo <a href="https://youtu.be/Q_tVHLGVDNA" target="_blank">aqui</a> e <a href="https://youtu.be/01oQNJhPbuI" target="_blank">neste aqui também</a> eu mostro mais algumas opções que já testei e que são legais. 
 
 - question: Você desenha com o que?
   answer: Atualmente utilizo uma mesa digitalizadora Wacom Bamboo Capture Small Pen & Touch CTH470L, e falei sobre ela neste vídeo aqui → [neste vídeo aqui](https://youtu.be/CuZoG2eYCvY)
