--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -2,7 +2,7 @@
   answer: Eu uso vários programas, um para cada finalidade, e dentre eles temos Photoshop, Inkscape, Hitfilm Express, Audacity, Krita, Blender, LibreOffice e After Effects. Neste vídeo <a href="https://youtu.be/Q_tVHLGVDNA" target="_blank">aqui</a> e <a href="https://youtu.be/01oQNJhPbuI" target="_blank">neste aqui também</a> eu mostro mais algumas opções que já testei e que são legais. 
 
 - question: Você desenha com o que?
-  answer: Atualmente utilizo uma mesa digitalizadora Wacom Bamboo Capture Small Pen & Touch CTH470L, e falei sobre ela <a href="https://youtu.be/CuZoG2eYCvY"> target="_blank">neste vídeo aqui</a>
+  answer: Atualmente utilizo uma mesa digitalizadora Wacom Bamboo Capture Small Pen & Touch CTH470L, e falei sobre ela <a href="https://youtu.be/CuZoG2eYCvY" target="_blank">neste vídeo aqui</a>
 
 - question: Você faz desenho por encomenda? Qual o preço?
   answer: Em breve sai uma sessão aqui no site sobre serviços, mas por enquanto ainda não.
