FAQ Atualização 6 - 17out2018

--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -8,6 +8,6 @@
   answer: Em breve sai uma sessão aqui no site sobre serviços, mas por enquanto ainda não.
 
 - question: Você já fez curso de desenho? Indica algum?
-  answer: Ainda não fiz nenhum curso de desenho ou algo relacionado, mas fortemente indico fuçarem nos canais <a href="https://www.brushrush.com.br/"> target="_blank">BRUSH RUSH</a>, <a href="https://iconic.network/"> target="_blank">ICONIC</a> E <a href="https://revolutionnow.com.br/"> target="_blank">REVOLUTION NOW</a>; lá tá sempre rolando conteúdo gratuito como palestras e vídeos no Youtube, assim como cursos pagos que com certeza são de ótima qualidade.
+  answer: Ainda não fiz nenhum curso de desenho ou algo relacionado, mas fortemente indico fuçarem nos canais <a href="https://www.brushrush.com.br/" target="_blank">BRUSH RUSH</a>, <a href="https://iconic.network/"> target="_blank">ICONIC</a> E <a href="https://revolutionnow.com.br/" target="_blank">REVOLUTION NOW</a>; lá tá sempre rolando conteúdo gratuito como palestras e vídeos no Youtube, assim como cursos pagos que com certeza são de ótima qualidade.
 
  
