--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title: Desenhando com Mack
-email: your-email@example.com
+email: desenhandocommack@gmail.com
 description: Este é o site oficial do canal Desenhando com Mack
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://confident-varahamihira-795914.netlify.com"
+url: "https://desenhandocommack.com.br"
 
 incremental: true
 
