--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -1,5 +1,5 @@
 - question: Qual programa você usa?
-  answer: Eu uso vários programas, um para cada finalidade, e dentre eles temos Photoshop, Inkscape, Hitfilm Express, Audacity, Krita, Blender, LibreOffice e After Effects. Neste vídeo <a href="https://youtu.be/Q_tVHLGVDNA" target="_blank">aqui</a> e <a href="https://youtu.be/01oQNJhPbuI" target="_blank">neste aqui também</a> eu mostro mais algumas opções que já testei e que são legais. 
+  answer: Eu uso vários programas, um para cada finalidade, e dentre eles temos Photoshop, Inkscape, Hitfilm Express, Audacity, Krita, Blender, LibreOffice e After Effects. Neste vídeo <a href="https://youtu.be/Q_tVHLGVDNA" target="_blank">aqui</a>, <a href="https://youtu.be/n626TFL0fME" target="_blank">aqui</a>  e <a href="https://youtu.be/01oQNJhPbuI" target="_blank">neste aqui também</a> eu mostro mais algumas opções que já testei e que são legais. 
 
 - question: Você desenha com o que?
   answer: Atualmente utilizo uma mesa digitalizadora Wacom Bamboo Capture Small Pen & Touch CTH470L, e falei sobre ela <a href="https://youtu.be/CuZoG2eYCvY" target="_blank">neste vídeo aqui</a>
@@ -7,7 +7,11 @@
 - question: Você faz desenho por encomenda? Qual o preço?
   answer: Em breve sai uma sessão aqui no site sobre serviços, mas por enquanto ainda não.
 
-- question: Você já fez curso de desenho? Indica algum?
-  answer: Ainda não fiz nenhum curso de desenho ou algo relacionado, mas fortemente indico fuçarem nos canais <a href="https://www.brushrush.com.br/" target="_blank">BRUSH RUSH</a>, <a href="https://iconic.network/" target="_blank">ICONIC</a> E <a href="https://revolutionnow.com.br/" target="_blank">REVOLUTION NOW</a>; lá tá sempre rolando conteúdo gratuito como palestras e vídeos no Youtube, assim como cursos pagos que com certeza são de ótima qualidade.
+- question: Você já fez curso de desenho?
+  answer: Ainda não fiz nenhum curso de desenho ou algo relacionado, os cursos que vi até o momento foram de modelagem 3D com o Sebastian Cavazzoli <a href="https://www.udemy.com/course/personagem3dblender/" target="_blank">aqui</a> e o Gustavo Rosa <a href="https://www.udemy.com/course/gustavo-rosa-introducao-ao-blender-/" target="_blank">aqui</a>.
+
+  
+
+  
 
  
