--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://layerdecaju.github.io/'
+baseURL = 'https://desenhandocommack.github.io/'
 languageCode = 'pt-br'
-title = 'Layer de Caju'
+title = 'Desenhando com Mack'
 theme = 'custom'
