--- a/hugo.toml
+++ b/hugo.toml
@@ -2,3 +2,10 @@ baseURL = 'https://desenhandocommack.github.io/'
 languageCode = 'pt-br'
 title = 'Desenhando com Mack'
 theme = 'custom'
+[permalinks]
+blog = ':slug'
+
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true
